recursion.lessons.recursion.koch.Koch.scala.error
Koch:28: error: illegal start of statement
	;else {
         ^